force-app/main/default/objects/NI_Trust_Outage_Email__c/NI_Trust_Outage_Email__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AH Trust Incident Email Notifications</label>
</CustomObject>