force-app/main/default/objects/NI_Trust_Outage_Email__c/fields/Delay_Time_Severity_1__c.field-meta.xml
<CustomField>
    <fullName>Delay_Time_Severity_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delay Time in Seconds (Severity 1)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>