force-app/main/default/objects/NI_Trust_Outage_Email__c/fields/Outgoing_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Addresses__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>