force-app/main/default/objects/NI_Trust_Outage_Email__c/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Types</label>
    <type>TextArea</type>
</CustomField>