force-app/main/default/objects/NI_Trust_Outage_Email__c/fields/Status_Open_Stage_1__c.field-meta.xml
<CustomField>
    <fullName>Status_Open_Stage_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Template (Open Stage 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>