force-app/main/default/objects/NI_Trust_Outage_Email__c/fields/Status_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Status_Resolved__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Template (Resolved)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>